src/style.scss
@use "Variablen" as *;

* {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  background-image: $background-color;
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
}
.Btn {
  cursor: pointer;
  font-style: italic;
  font-size: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  color: $btn-textcolor;
  border-radius: 3px;
  padding: 0.2rem 0.5rem;
  background-color: $primary-btn-color;
  font-size: 1rem;
  border: solid 1px transparent;
  transition: all 0.5s ease;
  &__Svg {
    width: 1.5rem;
    &--Delete {
      fill: red;
    }
  }

  &:hover {
    background-color: transparent;
    border-color: $primary-color;
  }
  &--Delete {
    width: fit-content;
    height: fit-content;
    background-color: transparent;
    &:hover {
      border-color: transparent;
    }

    &:hover .Btn__Svg--Delete {
      fill: $text-color;
      transition: all 0.5s ease;
    }
  }
  &--Inverted {
    background-color: transparent;
    border: solid 1px $primary-btn-color;

    &:hover {
      background-color: $primary-btn-color;
      border-color: transparent;
    }
  }
}

.App {
  height: 96%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  background-image: $bg-Img;
  background-size: 20%;
  background-position: top right;
  background-repeat: no-repeat;
}

.Header {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 2.5rem;
  height: 20%;

  &__Headline {
    font-size: 3.5rem;
    font-weight: bold;
    color: $headline-color;
    -webkit-text-stroke: 2px $primary-stroke;
  }
  &__Dropdown {
    background-color: $box-color;
    border: none;
    margin-top: 0.3rem;
    font-size: 1.2rem;

    color: $text-color;
    &__Option {
      color: $text-color;
    }
  }
}

.Main {
  width: 90%;
  height: 60%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  border-radius: 4px 4px 0 0;
  background-color: $box-color;
  backdrop-filter: blur(14px);
  border: solid 1px $border-color;
  box-shadow: $box-schadow;
  position: relative;

  &__Joke {
    overflow: auto;
    scrollbar-width: none;
    text-overflow: ellipsis;
    color: $text-color;
    font-size: 1.5rem;
    padding: 3rem 1.5rem;
  }

  &__BtnContainer {
    margin: 2rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center;

    gap: 0.5rem;
  }
}
.Footer {
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 20%;

  &__Headline {
    @extend .Header__Headline;
    -webkit-text-stroke: 1px $primary-stroke;
    font-size: 1.5rem;
  }
  &__JokeContainer {
    display: flex;
    align-items: start;
    flex-direction: column;
    overflow-x: scroll;
    scrollbar-width: none;
    scroll-behavior: smooth;
  }
  &__JokeCard {
    padding: 1.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  &__SavedJoke {
    color: $text-color;
  }
}

.disabled {
  display: none;
}
@media (max-height: 500) {
  .Header {
    height: 10%;
    margin-top: 1rem;

    &__Headline {
      font-size: 2rem;
    }
  }

  .Main {
    gap: 0.5rem;
    height: 40%;
    &__Joke {
      padding: 1rem 1rem;
      font-size: 1.5rem;
    }
    &__BtnContainer {
      margin: 0rem 0;
      flex-direction: row;
    }
  }
  .Footer {
    margin-top: 0.5rem;
    height: 19%;

    &__Headline {
      font-size: 1.5rem;
    }

    &__JokeCard {
      padding: 1rem;
    }
  }
}

@media (min-width: 1000px) {
  .Header {
    height: 30%;
    margin-top: 1rem;

    &__Headline {
      font-size: 5rem;
    }
    &__Dropdown {
      font-size: 1.5rem;
    }
  }

  .Main {
    gap: 0.5rem;
    height: 40%;
    width: 80%;
    &__Joke {
      font-size: 2rem;
    }
    &__BtnContainer {
      flex-direction: row;
    }
  }
  .Footer {
    &__Headline {
      font-size: 2rem;
    }

    &__SavedJoke {
      font-size: 1.5rem;
    }
  }
  .Btn {
    font-size: 1.5rem;
  }
}
@media (min-width: 1400px) {
  .Header {
    height: 30%;
    margin-top: 1rem;

    &__Headline {
      font-size: 6rem;
    }
    &__Dropdown {
      font-size: 2rem;
    }
  }

  .Main {
    &__Joke {
      padding: 1rem 1rem;
      font-size: 2.5rem;
    }
  }
  .Footer {
    &__Headline {
      font-size: 2.5rem;
    }

    &__SavedJoke {
      font-size: 2rem;
    }
  }
  .Btn {
    font-size: 2rem;
  }
}
@media (prefers-color-scheme: dark) {
  body {
    background-image: $background-color-dark;
  }
  .App {
    background-image: $bg-Img-dark;
    background-size: 25%;
  }

  .Btn {
    color: $text-color-dark;
    background-color: $primary-btn-color-dark;
    border: solid 1px transparent;

    &:hover {
      background-color: $headline-color-dark;
      border-color: $primary-color-dark;
    }
    &--Delete {
      background-color: transparent;
      &:hover {
        border-color: $headline-color-dark;
      }

      &:hover .Btn__Svg--Delete {
        fill: $text-color-dark;
      }
    }
    &--Inverted {
      background-color: $headline-color-dark;
      border: solid 1px $primary-btn-color-dark;

      &:hover {
        background-color: $primary-btn-color-dark;
        border-color: $headline-color-dark;
      }
    }
  }

  .Header {
    &__Headline {
      color: $headline-color-dark;
      -webkit-text-stroke: 2px $primary-btn-color-dark;
    }
    &__Dropdown {
      background-color: $box-color-dark;
      color: $text-color-dark;
      &__Option {
        color: $text-color-dark;
      }
    }
  }

  .Main {
    background-color: $box-color-dark;
    box-shadow: $box-schadow-dark;
    border: solid 2px $border-color-dark;

    &__Joke {
      color: $text-color-dark;
    }
  }
  .Footer {
    &__SavedJoke {
      color: $text-color-dark;
    }
    &__Headline {
      -webkit-text-stroke: 1px $primary-btn-color-dark;
    }
  }
}

